=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 v2.004

=over

=item *

Added new option "--makecats" to krang_upload_media and 
krang_upload_templates.  When specified, missing categories
will be created in the CMS, instead of skipped. [Jesse Erlbaum]

=back


=head2 v2.003

=over

=item *

Fixed sql/mypref.sql so that user's don't clobber each others
preferences. [Bodo Schulze]

=item *

Added missing setting of template param 'parent_path' to
Krang::CGI::ElementEditor::find_story_link() [Bodo Schulze]

=item *

Replaced template selector in 'New Template' and 'Find Template'
(advanced search) with category_chooser style template_chooser.
[Bodo Schulze]

=item *

Simplied use of --module option with bin/krang_build [Bodo Schulze]

=item *

Added checkbox to groups manager to allow "admin_lists" to be set.  [Jesse Erlbaum]

=item *

Fixed Kang::Navigation bug where Desks were not being displayed in proper order.
[Aaron Dancygier]

=item *

Fixed ISE when attempting to publish templates and media/stories at the same time
from the UI.
[Michael Peters]

=item *

Fixed ISE when viewing media files from the Scheduler UE.
[Michael Peters]

=back


=head2 v2.002

=over


=item *

Added new script krang_upload_media.  This works similarly to krang_upload_templates.
Using this script you can maintain a media/ directory in your add-on 
which contains all site-specific media.  This is particularly useful for
development, when developing templates and site design.  The script
krang_createdb now automatically loads any media found in your
add-on directory.  [Jesse Erlbaum]

=item *

Fixed L<Krang::Group> test to not key explicitly on name to simplify
overriding. [Peter Leonard]

=item *

Added addon admin scheduler 'admin_scheduler' permissioning bit so only admin users 
will see this feature. [Aaron Dancygier]

=item *

bin/krang_upgrade now checks that ENV{KRANG_ROOT} is unset [Aaron Dancygier]

=item *
