@@ -11,7 +11,18 @@ This document contains a list of changes for each release of Krang.
 
 Added new option "--makecats" to krang_upload_media and 
 krang_upload_templates.  When specified, missing categories
-will be created in the CMS, instead of skipped. [Jesse Erlbaum]
+will be created in the CMS, instead of skipped.  [Jesse Erlbaum]
+
+=item *
+
+Fixed bug in Krang::ElementClass::ListGroup where ListItem would not be
+added to DataSet.  [Jesse Erlbaum]
+
+=item *
+
+Fixed bug in Krang::ElementClass::Date where date would change if KDS
+was exported from a machine in one time zone and imported on a machine
+in an earlier time zone.  [Jesse Erlbaum]
 
 =back
 
